#5 user story#5 completed

--- a/VanNguyen-SimpleASP.NET/Views/Home/Index.cshtml
+++ b/VanNguyen-SimpleASP.NET/Views/Home/Index.cshtml
@@ -9,10 +9,12 @@
     <p>ASP.NET APPLICATION </p>
     <div class="mt-4">
         <h3>Enter a string:</h3>
+
         <input type="text" id="userInput" class="form-control w-50 mx-auto" placeholder="Type something..." />
         <button class="btn btn-primary mt-2" onclick="validateInput()">Check</button>
         <p id="result" class="mt-2 font-weight-bold"></p>
     </div>
+    <h2>Added new feature</h2>
 
 </div>
 <script>
