Implemented update form, client implementation, and added validation for stocks #9 #10 #11 #3

--- a/VanNguyen-SimpleASP.NET/Views/Home/Index.cshtml
+++ b/VanNguyen-SimpleASP.NET/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
         <p id="result" class="mt-2 font-weight-bold"></p>
     </div>
     <h2>Added new feature</h2>
-
+    <h2>Client ASP.NET FEATURES validation</h2>
 </div>
 <script>
     function validateInput() {
