--- a/VanNguyen-SimpleASP.NET/Views/Home/Index.cshtml
+++ b/VanNguyen-SimpleASP.NET/Views/Home/Index.cshtml
@@ -16,6 +16,8 @@
     </div>
     <h2>Added new feature</h2>
     <h2>Client ASP.NET FEATURES validation</h2>
+    <h2>Local Database File Items:</h2>
+    <p> Item 1 , 2 ,3 </p>
 </div>
 <script>
     function validateInput() {
