--- a/VanNguyen-SimpleASP.NET/Views/Home/Index.cshtml
+++ b/VanNguyen-SimpleASP.NET/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
     <h2>Client ASP.NET FEATURES validation</h2>
     <h2>Local Database File Items:</h2>
     <p> Item 1 , 2 ,3 </p>
+    <h3>Database access has already been done on April 9, 2025 by VAN NGUYEN</h3>
 </div>
 <script>
     function validateInput() {
